--- a/Index.html
+++ b/Index.html
@@ -348,10 +348,10 @@
     <section class="mb-4">
       <h4>Social Media</h4>
       <!-- Whatsapp -->
-      <a target="_blank" onclick="openInNewTab('https:wa.me/+6288975964763')" class="btn btn-outline-light btn-floating m-1"role="button">
+      <a target="_blank" onclick="openInNewTab('wa.me/+6288975964763')" class="btn btn-outline-light btn-floating m-1"role="button">
       <i class="fa fa-whatsapp" aria-hidden="true"></i>
       <!-- Facebook -->
-      <a target="_blank" onclick="openInNewTab('https:www.facebook.com/monickstone12')" class="btn btn-outline-light btn-floating m-1"role="button"
+      <a target="_blank" onclick="openInNewTab('www.facebook.com/monickstone12')" class="btn btn-outline-light btn-floating m-1"role="button"
         ><i class="fab fa-facebook-f"></i
       ></a>
       <!-- Google -->
@@ -359,11 +359,11 @@
         ><i class="fab fa-google"></i
       ></a>
       <!-- Instagram -->
-      <a target="_blank" onclick="openInNewTab('https:www.instagram.com/namsart_design/')" class="btn btn-outline-light btn-floating m-1" role="button"
+      <a target="_blank" onclick="openInNewTab('www.instagram.com/namsart_design/')" class="btn btn-outline-light btn-floating m-1" role="button"
         ><i class="fab fa-instagram"></i
       ></a>
       <!-- Linkedin -->
-      <a target="_blank" onclick="openInNewTab('https:www.linkedin.com/in/monica-zahri-6b3b6b23b')" class="btn btn-outline-light btn-floating m-1" role="button"
+      <a target="_blank" onclick="openInNewTab('www.linkedin.com/in/monica-zahri-6b3b6b23b')" class="btn btn-outline-light btn-floating m-1" role="button"
         ><i class="fab fa-linkedin-in"></i
       ></a>
     </section>
