--- a/Index.html
+++ b/Index.html
@@ -467,11 +467,10 @@ dan Home living
             <script>
 
               function openInNewTab(url) {
-              window.open(url).focus();
-                
+                window.open(url, '_blank').focus()               
               }
               //or just
-              // window.open(url, '_blank').focus();
+              window.open(url, '_blank').focus();
               </script>
 
             <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
