--- a/Index.html
+++ b/Index.html
@@ -348,22 +348,22 @@
     <section class="mb-4">
       <h4>Social Media</h4>
       <!-- Whatsapp -->
-      <a onclick="openInNewTab('https:wa.me/+6288975964763')" class="btn btn-outline-light btn-floating m-1"role="button">
+      <a href="https:wa.me/+6288975964763" target="_blank" class="btn btn-outline-light btn-floating m-1"role="button">
       <i class="fa fa-whatsapp" aria-hidden="true"></i>
       <!-- Facebook -->
-      <a onclick="openInNewTab('https:www.facebook.com/monickstone12')" class="btn btn-outline-light btn-floating m-1"role="button"
+      <a href="https:www.facebook.com/monickstone12" target="_blank" class="btn btn-outline-light btn-floating m-1"role="button"
         ><i class="fab fa-facebook-f"></i
       ></a>
       <!-- Google -->
-      <a onclick="openInNewTab('mailto:monzah27@gmail.com')" class="btn btn-outline-light btn-floating m-1" role="button"
+      <a href="mailto:monzah27@gmail.com"class="btn btn-outline-light btn-floating m-1" role="button"
         ><i class="fab fa-google"></i
       ></a>
       <!-- Instagram -->
-      <a onclick="openInNewTab('https:www.instagram.com/namsart_design/')" class="btn btn-outline-light btn-floating m-1" role="button"
+      <a href="https:www.instagram.com/namsart_design" target="_blank" class="btn btn-outline-light btn-floating m-1" role="button"
         ><i class="fab fa-instagram"></i
       ></a>
       <!-- Linkedin -->
-      <a onclick="openInNewTab('https:www.linkedin.com/in/monica-zahri-6b3b6b23b')" class="btn btn-outline-light btn-floating m-1" role="button"
+      <a href="https:www.linkedin.com/in/monica-zahri-6b3b6b23b" class="btn btn-outline-light btn-floating m-1" role="button"
         ><i class="fab fa-linkedin-in"></i
       ></a>
     </section>
@@ -467,11 +467,11 @@ dan Home living
             <script type="text/javascript">
 
               function openInNewTab(url) {
-              window.open(url).focus();
-                
+              window.open(url, '_blank').focus();
+  
               }
               //or just
-              // window.open(url, '_blank').focus();
+              
               </script>
 
             <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
