--- a/Index.html
+++ b/Index.html
@@ -182,7 +182,7 @@
                         <div class="card-group">
                           <div class="card shadow">
                             <div class="card-body">
-                              <a onclick="openInNewTab('/Assets/Design/Container Cafe 1.png')"><img src="/Assets/Design/Container Cafe 1.png"class="rounded card-img-top" alt="..."></a>
+                              <a onclick="window.open('/Assets/Design/Container Cafe 1.png')"><img src="/Assets/Design/Container Cafe 1.png"class="rounded card-img-top" alt="..."></a>
                               <p class="card-title">Container Cafe</p>
                             </div>
                           </div>
@@ -194,7 +194,7 @@
                         <div class="card-group">
                           <div class="card shadow">
                             <div class="card-body">
-                              <a onclick="openInNewTab('/Assets/Design/Container Living Room.png')"><img src="/Assets/Design/Container Living Room.png"class="rounded card-img-top"alt="..."></a>
+                              <a onclick="window.open('/Assets/Design/Container Living Room.png')"><img src="/Assets/Design/Container Living Room.png"class="rounded card-img-top"alt="..."></a>
                               <p class="card-title">Container Room</p>
                             </div>
                           </div>
@@ -206,7 +206,7 @@
                       <div class="card-group">
                         <div class="card shadow">
                           <div class="card-body">
-                            <a onclick="openInNewTab('/Assets/Design/Container Minimart.png')"><img src="/Assets/Design/Container Minimart.png"class="rounded card-img-top" alt="..."></a>
+                            <a onclick="window.open('/Assets/Design/Container Minimart.png')"><img src="/Assets/Design/Container Minimart.png"class="rounded card-img-top" alt="..."></a>
                             <p class="card-title">Container Minimart</p>
                           </div>
                         </div>
@@ -218,7 +218,7 @@
                       <div class="card-group">
                         <div class="card shadow">
                           <div class="card-body">
-                            <a onclick="openInNewTab('/Assets/Design/Container Office + Cafe.png')"><img src="/Assets/Design/Container Office + Cafe.png"class="rounded card-img-top" alt="..."></a>
+                            <a onclick="window.open('/Assets/Design/Container Office + Cafe.png')"><img src="/Assets/Design/Container Office + Cafe.png"class="rounded card-img-top" alt="..."></a>
                             <p class="card-title">Container Office</p>
                           </div>
                         </div>
@@ -230,7 +230,7 @@
                       <div class="card-group">
                         <div class="card shadow">
                           <div class="card-body">
-                            <a onclick="openInNewTab('/Assets/Design/Container Police.png')"><img src="/Assets/Design/Container Police.png"class="rounded card-img-top" alt="..."></a>
+                            <a onclick="window.open('/Assets/Design/Container Police.png')"><img src="/Assets/Design/Container Police.png"class="rounded card-img-top" alt="..."></a>
                             <p class="card-title">Container Police</p>
                           </div>
                         </div>
@@ -242,7 +242,7 @@
                       <div class="card-group">
                         <div class="card shadow">
                           <div class="card-body">
-                            <a onclick="openInNewTab('/Assets/Design/Container Portacamp.png')"><img src="/Assets/Design/Container Portacamp.png"class="rounded card-img-top" alt="..."></a>
+                            <a onclick="window.open('/Assets/Design/Container Portacamp.png')"><img src="/Assets/Design/Container Portacamp.png"class="rounded card-img-top" alt="..."></a>
                             <p class="card-title">Container Portacamp</p>
                           </div>
                         </div>
@@ -348,7 +348,7 @@
     <section class="mb-4">
       <h4>Social Media</h4>
       <!-- Whatsapp -->
-      <a href="https://wa.me/+6288975964763" class="btn btn-outline-light btn-floating m-1"role="button">
+      <a href="https://wa.me/+6288975964763" target="_blank" class="btn btn-outline-light btn-floating m-1"role="button">
       <i class="fa fa-whatsapp" aria-hidden="true"></i>
       <!-- Facebook -->
       <a href="https://www.facebook.com/monickstone12" class="btn btn-outline-light btn-floating m-1"role="button"
