--- a/Index.html
+++ b/Index.html
@@ -351,7 +351,7 @@
       <a href="https://wa.me/+6288975964763" target="_blank" class="btn btn-outline-light btn-floating m-1"role="button">
       <i class="fa fa-whatsapp" aria-hidden="true"></i>
       <!-- Facebook -->
-      <a href="https://www.facebook.com/monickstone12" class="btn btn-outline-light btn-floating m-1"role="button"
+      <a href="https://www.facebook.com/monickstone12" target="_blank" class="btn btn-outline-light btn-floating m-1"role="button"
         ><i class="fab fa-facebook-f"></i
       ></a>
       <!-- Google -->
@@ -359,11 +359,11 @@
         ><i class="fab fa-google"></i
       ></a>
       <!-- Instagram -->
-      <a href="https://www.instagram.com/namsart_design"class="btn btn-outline-light btn-floating m-1" role="button"
+      <a href="https://www.instagram.com/namsart_design"target="_blank"class="btn btn-outline-light btn-floating m-1" role="button"
         ><i class="fab fa-instagram"></i
       ></a>
       <!-- Linkedin -->
-      <a href="https://www.linkedin.com/in/monica-zahri-6b3b6b23b" class="btn btn-outline-light btn-floating m-1" role="button"
+      <a href="https://www.linkedin.com/in/monica-zahri-6b3b6b23b" target="_blank" class="btn btn-outline-light btn-floating m-1" role="button"
         ><i class="fab fa-linkedin-in"></i
       ></a>
     </section>
